--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "apexcharts": "^3.45.2",
     "autoprefixer": "^10.4.19",
+    "core-js": "^3.37.1",
     "firebase": "^10.12.0",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.5.3",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "next": "14.2.3",
     "react": "^18",
