--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@daypilot/daypilot-lite-react": "^3.21.0",
     "apexcharts": "^3.45.2",
     "autoprefixer": "^10.4.19",
     "core-js": "^3.37.1",
@@ -20,8 +21,10 @@
     "next": "14.2.3",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
